# CSOPESY_MACHINE_PROJECT

./: .env  CMakeLists.txt  README.md  main.cpp
ThreatDragonModels/M_Threat Model/: M_Threat Model.json
ThreatDragonModels/New Threat Model/: New Threat Model.json
src/screen/: AddCommand.cpp  AddCommand.h  CPUCore.cpp  CPUCore.h  CPUticks.cpp  CPUticks.h  DeclareCommand.cpp  DeclareCommand.h  ForCommand.cpp  ForCommand.h  ICommand.cpp  ICommand.h  Memory.cpp  Memory.h  MemoryManager.cpp  MemoryManager.h  Pages.cpp  Pages.h  PrintCommand.cpp  PrintCommand.h  ReadCommand.cpp  ReadCommand.h  Scheduler.cpp  Scheduler.h  SleepCommand.cpp  SleepCommand.h  SubCommand.cpp  SubCommand.h  Thread.cpp  Thread.h  WriteCommand.cpp  WriteCommand.h  generateprocess.cpp  generateprocess.h  process.cpp  process.h  screen.cpp  screen.h
src/shell/: shell.cpp  shell.h  util.cpp  util.h
